// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generator snapshots > 'express-auth' folder tree and key files match the snapshot 1`] = `
{
  "keyFiles": {
    "prisma/schema.prisma": "generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id        String   @id @default(uuid())
  email     String   @unique
  password  String
  role      Role     @default(USER)
  verified  Boolean  @default(false)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  sessions  Session[]
}

model Session {
  id           String   @id @default(uuid())
  userId       String
  refreshToken String   @unique
  expiresAt    DateTime

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  createdAt DateTime @default(now())
}

enum Role {
  USER
  ADMIN
}",
    "src/app.ts": "import  express from "express";
import { createAuthRoutes } from "./routes/auth.routes";
import { createProtectedRoutes } from "./routes/protected.routes";

export const createApp = (auth: any) => {
  const app = express();

  app.use(express.json({ limit: "16kb", strict: true }));

  app.use(auth.helmet);
  app.use(auth.rateLimit);

  app.use("/auth", createAuthRoutes(auth));
  app.use("/", createProtectedRoutes(auth));

  return app;
};",
    "src/controllers/auth.controller.ts": "import { Request, Response } from "express";
import { AuthService } from "../services/auth.services";
import { parseCredentials, parseRefreshToken } from "../utils/security";

export const createAuthController = (auth: any) => ({
  async register(req: Request, res: Response) {
    try {
      const { email, password } = parseCredentials(req.body);

      const user = await AuthService.register(email, password);

      res.json({ message: "User created", userId: user.id });
    } catch (err) {
      res.status(400).json({ error: (err as Error).message || "Invalid registration request" });
    }
  },

  async login(req: Request, res: Response) {
    try {
      const { email, password } = parseCredentials(req.body);

      const user = await AuthService.login(email, password);

      const accessToken = auth.signToken({
        userId: user.id,
        email: user.email,
      });

      const refreshToken = await auth.generateRefreshToken({
        userId: user.id,
        email: user.email,
      });

      res.json({ accessToken, refreshToken });
    } catch {
      res.status(401).json({ error: "Invalid credentials" });
    }
  },

  async refresh(req: Request, res: Response) {
    try {
      const refreshToken = parseRefreshToken(req.body);
      const tokens = await auth.refreshToken(refreshToken);
      res.json(tokens);
    } catch {
      res.status(401).json({ error: "Invalid refresh token" });
    }
  },
});",
    "src/controllers/protected.controller.ts": "import { Request, Response } from "express";
import { sanitizeSessionResponse } from "../utils/security";

export const createProtectedController = () => ({
  protected(req: Request, res: Response) {
    res.json({ message: "Protected route" });
  },

  async listSessions(req: Request, res: Response) {
    try {
      const actions = (req as any).adminActions;
      if (!actions) {
        return res.status(503).json({ success: false, message: "Session management unavailable" });
      }

      const sessions = await actions.listSessions(req.params.userId);
      res.json({ sessions: sanitizeSessionResponse(sessions) });
    } catch {
      res.status(500).json({ success: false, message: "Failed to retrieve sessions" });
    }
  },

  async revokeSession(req: Request, res: Response) {
    try {
      const actions = (req as any).adminActions;
      if (!actions) {
        return res.status(503).json({ success: false, message: "Session management unavailable" });
      }

      await actions.revokeSession(req.params.userId, req.params.sessionId);
      res.json({ success: true, message: "Session revoked" });
    } catch {
      res.status(500).json({ success: false, message: "Failed to revoke session" });
    }
  },

  async revokeAllSessions(req: Request, res: Response) {
    try {
      const actions = (req as any).adminActions;
      if (!actions) {
        return res.status(503).json({ success: false, message: "Session management unavailable" });
      }

      await actions.revokeAllSessions(req.params.userId);
      res.json({ success: true, message: "All sessions revoked" });
    } catch {
      res.status(500).json({ success: false, message: "Failed to revoke sessions" });
    }
  },
});",
    "src/routes/auth.routes.ts": "import { Router } from "express";
import { createAuthController } from "../controllers/auth.controller";

export const createAuthRoutes = (auth: any) => {
  const router = Router();
  const controller = createAuthController(auth);

  router.post("/register", controller.register);
  router.post("/login", controller.login);
  router.post("/refresh", controller.refresh);

  return router;
};",
    "src/routes/protected.routes.ts": "import { Router } from "express";
import { createProtectedController } from "../controllers/protected.controller";

export const createProtectedRoutes = (auth: any) => {
  const router = Router();
  const controller = createProtectedController();

  router.get("/protected", auth.requireAdmin, controller.protected);
  router.get("/admin/sessions/:userId", auth.requireAdmin, controller.listSessions);
  router.delete("/admin/sessions/:userId/:sessionId", auth.requireAdmin, controller.revokeSession);
  router.delete("/admin/sessions/:userId", auth.requireAdmin, controller.revokeAllSessions);

  return router;
};",
    "src/utils/hash.ts": "import bcrypt from "bcryptjs";

export const hashPassword = (password: string) => {
return bcrypt.hash(password, 10);
};

export const comparePassword = (password: string, hash: string) => {
return bcrypt.compare(password, hash);
};",
  },
  "template": "auth",
  "tree": [
    "README.md",
    "THREAT_MODEL.md",
    "docker-compose.yml",
    "package.json",
    "prisma/",
    "prisma/schema.prisma",
    "src/",
    "src/app.ts",
    "src/controllers/",
    "src/controllers/auth.controller.ts",
    "src/controllers/protected.controller.ts",
    "src/prisma/",
    "src/prisma/client.ts",
    "src/routes/",
    "src/routes/auth.routes.ts",
    "src/routes/protected.routes.ts",
    "src/server.ts",
    "src/services/",
    "src/services/auth.services.ts",
    "src/utils/",
    "src/utils/hash.ts",
    "src/utils/security.ts",
    "tsconfig.json",
  ],
}
`;

exports[`generator snapshots > 'express-base' folder tree and key files match the snapshot 1`] = `
{
  "keyFiles": {
    "app.ts": "import  express  from "express";
import { createBaseRoutes } from "./routes/base.routes";

export const createApp = (auth: any) => {
  const app = express();

  app.use(express.json({ limit: "16kb", strict: true }));

  app.use(auth.helmet);
  app.use(auth.rateLimit);

  app.use("/", createBaseRoutes(auth));

  return app;
};",
    "controllers/base.controller.ts": "import { Request, Response } from "express";
import { getBearerToken, parseRefreshToken, sanitizeSessionResponse } from "../utils/security";

export const createBaseController = (auth: any) => ({
  publicRoute(req: Request, res: Response) {
    res.json({ message: "Public route" });
  },

  async guest(req: Request, res: Response) {
    const token = await auth.guestToken({ role: "guest" });
    res.json({ token });
  },

  async protected(req: Request, res: Response) {
    const token = getBearerToken(req.headers.authorization);

    try {
      const decoded = await auth.verifyToken(token);
      res.json({ message: "Protected data", user: decoded });
    } catch {
      res.status(401).json({ error: "Unauthorized" });
    }
  },

  async refresh(req: Request, res: Response) {
    try {
      const refreshToken = parseRefreshToken(req.body);
      const tokens = await auth.refreshToken(refreshToken);
      res.json(tokens);
    } catch {
      res.status(401).json({ error: "Invalid refresh token" });
    }
  },

  admin(req: Request, res: Response) {
    res.json({ message: "Admin only" });
  },

  async listSessions(req: Request, res: Response) {
    try {
      const actions = (req as any).adminActions;
      if (!actions) {
        return res.status(503).json({ success: false, message: "Session management unavailable" });
      }

      const sessions = await actions.listSessions(req.params.userId);
      res.json({ sessions: sanitizeSessionResponse(sessions) });
    } catch {
      res.status(500).json({ success: false, message: "Failed to retrieve sessions" });
    }
  },

  async revokeSession(req: Request, res: Response) {
    try {
      const actions = (req as any).adminActions;
      if (!actions) {
        return res.status(503).json({ success: false, message: "Session management unavailable" });
      }

      await actions.revokeSession(req.params.userId, req.params.sessionId);
      res.json({ success: true, message: "Session revoked" });
    } catch {
      res.status(500).json({ success: false, message: "Failed to revoke session" });
    }
  },

  async revokeAllSessions(req: Request, res: Response) {
    try {
      const actions = (req as any).adminActions;
      if (!actions) {
        return res.status(503).json({ success: false, message: "Session management unavailable" });
      }

      await actions.revokeAllSessions(req.params.userId);
      res.json({ success: true, message: "All sessions revoked" });
    } catch {
      res.status(500).json({ success: false, message: "Failed to revoke sessions" });
    }
  },
});",
    "prisma/schema.prisma": "generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "sqlite"
  url      = env("DATABASE_URL")
}

model User {
  id        String   @id @default(uuid())
  email     String   @unique
  password  String
  role      String     @default("USER")
  verified  Boolean  @default(false)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  sessions  Session[]
}

model Session {
  id           String   @id @default(uuid())
  userId       String
  refreshToken String   @unique
  expiresAt    DateTime

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  createdAt DateTime @default(now())
}",
    "routes/base.routes.ts": "import { Router } from "express";
import { createBaseController } from "../controllers/base.controller";

export const createBaseRoutes = (auth: any) => {
  const router = Router();
  const controller = createBaseController(auth);

  router.get("/public", controller.publicRoute);
  router.get("/guest", controller.guest);
  router.get("/protected", controller.protected);
  router.post("/refresh", controller.refresh);

  router.get("/admin", auth.requireAdmin, controller.admin);
  router.get("/admin/sessions/:userId", auth.requireAdmin, controller.listSessions);
  router.delete("/admin/sessions/:userId/:sessionId", auth.requireAdmin, controller.revokeSession);
  router.delete("/admin/sessions/:userId", auth.requireAdmin, controller.revokeAllSessions);

  return router;
};",
    "src/server.ts": "import  dotenv  from "dotenv";
import { createAuthenik8 } from "authenik8-core";
import { createApp } from "../app";
import { requiredSecret } from "../utils/security";

dotenv.config();

async function start() {
  const auth = await createAuthenik8({
    jwtSecret: requiredSecret("JWT_SECRET"),
    refreshSecret: requiredSecret("REFRESH_SECRET"),
  });

  const app = createApp(auth);

  app.listen(3000, () => {
    console.log("🚀 Server running on http://localhost:3000");
  });
}
process.on("uncaughtException", (err) => {
  console.error(" Uncaught Exception:", err);
  process.exit(1);
});

process.on("unhandledRejection", (err) => {
  console.error(" Unhandled Rejection:", err);
  process.exit(1);
});
setInterval(() => {
  const used = process.memoryUsage().heapUsed / 1024 / 1024;

  if (used > 300) {
    console.error(\`Memory exceeded: \${used.toFixed(2)} MB\`);
    process.exit(1);
  }
}, 10000);
start();",
  },
  "template": "base",
  "tree": [
    "README.md",
    "THREAT_MODEL.md",
    "app.ts",
    "controllers/",
    "controllers/base.controller.ts",
    "docker-compose.yml",
    "package.json",
    "prisma/",
    "prisma/schema.prisma",
    "routes/",
    "routes/base.routes.ts",
    "src/",
    "src/server.ts",
    "tsconfig.json",
    "utils/",
    "utils/security.ts",
  ],
}
`;
